// This file is part of arduino-cli.
//
// Copyright 2020 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to
// modify or otherwise use the software for commercial activities involving the
// Arduino software without disclosing the source code of your own applications.
// To purchase a commercial license, send an email to license@arduino.cc.

syntax = "proto3";

package cc.arduino.cli.commands;

option go_package = "github.com/arduino/arduino-cli/rpc/commands";

// this is why this module is inside "commands":
// I cannot use the CompileReq and Init messages if I create a special "debug package"
import "commands/common.proto";
import "commands/compile.proto";

// Service that abstract a debug Session usage
service Debug {
    rpc StreamingOpen (stream StreamingOpenReq) returns (stream StreamingOpenResp) {
    }
}

// The top-level message sent by the client for the `StreamingOpen` method.
// Multiple `StreamingOpenReq` messages can be sent but the first message
// must contain a `debug_config` message to initialize the debug session.
// All subsequent messages must contain bytes to be sent to the debug session
// and must not contain a `session_config` message.
message StreamingOpenReq {
    // Content must be either a debug session config or data to be sent.
    oneof content {
        // Provides information to the debug that specifies which is the target.
        // The first `StreamingOpenReq` message must contain a `debug_config`
        // message.
        CompileReq compileReq = 1;

        // The data to be sent to the target being monitored.
        bytes data = 2;
    }
}



//
message StreamingOpenResp {
    bytes data = 1;
}

